--- a/src/components/Pagination/Pagination.module.scss
+++ b/src/components/Pagination/Pagination.module.scss
@@ -3,19 +3,33 @@
     margin-top: 4rem;
 
     .item {
-        padding: 1rem 1.5rem;
-        background-color: #F0A5C3;
+        padding: 0.5rem 1rem;
+
         color: white;
         font-weight: 700;
         border-radius: 0.2rem;
-        margin: 0.5rem;
+        margin: 0.2rem;
+
+        &.active {
+            background-color: #F0A5C3;
+        }
+
+        &.disabled {
+            pointer-events: none;
+            opacity: 0.5;
+        }
+
+        &.item:first-child,
+        &.item:last-child {
+            background-color: #F0A5C3;
+        }
 
         &.item:first-child {
-            margin-right: 1.5rem;
+            margin-right: 0.5rem;
         }
 
         &.item:last-child {
-            margin-left: 1.5rem;
+            margin-left: 0.5rem;
         }
     }
 }
