--- a/src/views/App.module.scss
+++ b/src/views/App.module.scss
@@ -10,6 +10,7 @@
         display: flex;
         flex-direction: column;
         align-items: center;
+        margin-bottom: 2rem;
 
         .title {
             margin: 0;
