--- a/src/components/Pagination/Pagination.module.scss
+++ b/src/components/Pagination/Pagination.module.scss
@@ -1,10 +1,11 @@
 .pagination {
     display: flex;
+    flex-wrap: wrap;
     margin-top: 4rem;
+    width: 100%;
 
     .item {
         padding: 0.5rem 1rem;
-
         color: white;
         font-weight: 700;
         border-radius: 0.2rem;
