--- a/src/components/Table/TableData/TableData.module.scss
+++ b/src/components/Table/TableData/TableData.module.scss
@@ -1,3 +1,35 @@
 .row:nth-child(even) {
     background-color: #5e636d;
 }
+
+@media(max-width:870px) {
+
+    .row,
+    td {
+        display: block;
+        width: 100%;
+    }
+
+    .row {
+        margin-bottom: 1rem;
+        border: 1px solid #F0A5C3;
+
+        td {
+            text-align: right;
+            padding-left: 50%;
+            position: relative;
+
+            &::before {
+                content: attr(data-label);
+                position: absolute;
+                left: 1rem;
+                width: 50%;
+                text-align: left;
+                font-weight: 700;
+
+            }
+        }
+    }
+
+
+}
