--- a/src/views/App.module.scss
+++ b/src/views/App.module.scss
@@ -3,14 +3,14 @@
     flex-direction: column;
     align-items: center;
     padding: 4rem;
-    width: 100vw;
-    height: 100vh;
+    width: 100%;
 
     .content {
         display: flex;
         flex-direction: column;
         align-items: center;
         margin-bottom: 2rem;
+        width: 100%;
 
         .title {
             margin: 0;
