--- a/src/components/Pagination/Pagination.module.scss
+++ b/src/components/Pagination/Pagination.module.scss
@@ -11,6 +11,9 @@
         font-weight: 700;
         border-radius: 0.2rem;
         margin: 0.2rem;
+        border: none;
+        background: none;
+        outline: none;
 
         &.active {
             background-color: #F0A5C3;
